--- a/cgame.vcxproj
+++ b/cgame.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Drawable.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Scene.hpp" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utils.hpp" />
   </ItemGroup>
@@ -168,6 +169,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="cgame.cpp" />
     <ClCompile Include="Drawable.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
